2017-12-18    <cerebrum@cleomedes.uit.no>

	* import_FS.py (process_person_callback): new_person.populate() should not be inside try catch.

2017-12-13    <cerebrum@cleomedes.uit.no>

	* export_xml_fronter.py: removed old import line

	* import_OU.py (set_quaran): Remove debug line

2017-12-08    <cerebrum@cleomedes.uit.no>

	* import_OU.py (set_quaran): add_entity_quarantine need dattime object to be string.

2017-12-07    <cerebrum@cleomedes.uit.no>

	* import_tlf.py (notify_phoneadmin):fixed a bug which would make the rogram crash if dryrun and debug was used at the same time

	* update_displayname.py (main): updated url

	* process_uit_email.py (get_priority): removed 2 printlines

2017-12-01    <cerebrum@cleomedes.uit.no>

	* process_uit_email.py (process_mail): we cannot iterate over an
	empty object. create if test first

2017-11-21    <cerebrum@cleomedes.uit.no>

	* generate_OU.py (ou.__init__): updated FS source database

	* import_tlf.py (init_cache): all workphones will now have the
	prefix +47 added to their number

	* import_sito.py (import_person): Script will now also import
	person work titles

2017-11-15    <cerebrum@cleomedes.uit.no>

	* wipe.py: Added to repo. it deletes passwords from the change_log table

2017-11-13    <cerebrum@cleomedes.uit.no>

	* export_ad.py: this script will now use 2 different functions to
	collect ou information. one for regular UiT (with stedekode) for
	employees and students. One for sito (withouth stedkode) for sito
	employees

2017-11-09    <cerebrum@cleomedes.uit.no>

	* import_PAGA.py (process_person): Added code that will collect
	campus information for all paga persons

2017-11-08    <cerebrum@cleomedes.uit.no>

	* ad_export_autogroups_undervisning.py: need to import access_FS
	from the no tree in order to import override function
	underv_enhet_xml_parser and underv_enhet_xml_parser

2017-11-07    <cerebrum@cleomedes.uit.no>

	* process_uit_email.py (calculate_uit_emails): updated script to